Prevent chatbox overflow when typing a longer message

--- a/code/Chat.razor.scss
+++ b/code/Chat.razor.scss
@@ -57,6 +57,12 @@ Chat
 	.input
 	{
 		color: white;
+
+		.textentry
+		{
+			align-items: flex-start;
+			white-space: normal;
+		}
 	}
 
 	&.open
